Fix chunk resizing semantics upon downgrade between 6.x versions

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.2.0-rc0
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding EMEA 2022-09-19
    • 170
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Since it was initially assumed that data size aware balancing would land in v6.0, the chunk resize policy was structured to unconditionally happen on downgrade (from v6.0 to v5.x). As data size aware balancing landed in v6.1, it is needed to adapt that part of the code to only resize chunks in case the downgrade is happening from v6.x (x>0) to v6.0.

            Assignee:
            Pierlauro Sciarelli
            Reporter:
            Pierlauro Sciarelli
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: