SERVER-69494 Fix chunk resizing upon downgrade between 6.x versions